--- a/events/templates/persons/base.html
+++ b/events/templates/persons/base.html
@@ -22,7 +22,7 @@
 
 </header>
 <main role="main">
-    <div class="container">
+    <div class="container{% if fluid == True %}-fluid m-0 p-0{% endif %}">
 
         {% block content %}{% endblock %}
     </div>
