--- a/events/templates/persons/home.html
+++ b/events/templates/persons/home.html
@@ -1,46 +1,253 @@
 {% extends 'persons/base_navbar.html' %}
 {% load bootstrap4 %}
+{% load static %}
 
 {% block content %}
-    <div>
-        <div>
-            <h2>POUR QUI ?</h2>
+    <div class="contain">
+        <div class="circle">
         </div>
-        <div>
-            <p>Ce site est accessible pour les professionnels de l'évènement comme pour les particuliers
-                qui
-                souhaitent
-                promouvoir des évènements ou simplement les utilisateurs qui souhaite participer.</p>
-        </div>
-        <div>
-            <div>
-                <div>
-                    <h2>QUI SOMMES-NOUS?</h2>
-                </div>
-                <div>
-                    <p>Un groupe d'étudiant qui souhaite divertir les gens. Enfaite on aime faire des activités
-                        sympas
-                        et découvrir
-                        de nouvelles choses. On a donc souhaité faire rencontrer les gens avec des activités,
-                        aider les
-                        gens à
-                        sortir autrement.</p>
-                </div>
+        <div class="content">
+            <div class="content-event">
+                <h1>Share Event <br> Together</h1>
+                <p>Les meilleurs événements près de chez vous</p>
+                <a class="btn-event" href="#">Nos évènements</a>
             </div>
-            <div>
-                <div>
-                    <h2>VOUS SOUHAITEZ ?</h2>
-                </div>
-                <div>
-                    <p> Faire quelque chose de nouveau ou apprendre?
-                        Vous ne savez pas quoi faire avec votre enfant, vote soeur ou bien vos copines pour
-                        sortir ? Trouver
-                        des
-                        évènements, de tous genre, autour de vous, avec des utilisateurs notés grâce à leurs
-                        évènements
-                        précédents.</p>
-                </div>
+            <div class="feature-img">
+                <img src="{% static "assets/friendship.png" %}" alt="">
             </div>
         </div>
     </div>
+    <section class="section">
+        <div class="container container-margin">
+            <div class="circle1">
+
+            </div>
+            <div class="row row-margin">
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="col test">
+                        <!-- CUSTOM BLOCKQUOTE -->
+                        <blockquote class="blockquote blockquote-custom bg-white p-5 shadow rounded">
+                            <div class="blockquote-custom-icon bg-info shadow-sm"><h2 class="h5 m-0 text-light">POUR QUI
+                                ?</h2></div>
+                            <p class="mb-0 mt-3 font-italic"> Ce site est accessible pour les professionnels de
+                                l'évènement
+                                comme pour les particuliers
+                                qui
+                                souhaitent
+                                promouvoir des évènements ou simplement les utilisateurs qui souhaite participer.</p>
+                        </blockquote><!-- END --> <!-- CUSTOM BLOCKQUOTE -->
+                    </div>
+                    <div class="col mt-5">
+                        <blockquote class="blockquote blockquote-custom bg-white p-5 shadow rounded">
+                            <div class="blockquote-custom-icon bg-info shadow-sm"><h2 class="h5 m-0 text-light">VOUS
+                                SOUHAITEZ ?</h2>
+                            </div>
+                            <p class="mb-0 mt-3 font-italic"> Faire quelque chose de nouveau ou apprendre?
+                                Vous ne savez pas quoi faire avec votre enfant, vote soeur ou bien vos copines pour
+                                sortir ? Trouver
+                                des
+                                évènements, de tous genre, autour de vous, avec des utilisateurs notés grâce à leurs
+                                évènements
+                                précédents.</p>
+                        </blockquote><!-- END -->
+                    </div>
+                </div>
+                <div class="col-lg-6 m-auto col-md-12 col-sm-12">
+                    <div class="col">
+                        <blockquote class="blockquote blockquote-custom bg-white p-5 shadow rounded">
+                            <div class="blockquote-custom-icon bg-info shadow-sm"><h2 class="h5 m-0 text-light">QUI
+                                SOMMES-NOUS ?</h2></div>
+                            <p class="mb-0 mt-3 font-italic"> Un groupe d'étudiant qui souhaite divertir les gens.
+                                Enfaite
+                                on aime faire des activités
+                                sympas
+                                et découvrir
+                                de nouvelles choses. On a donc souhaité faire rencontrer les gens avec des activités,
+                                aider les
+                                gens à
+                                sortir autrement.</p>
+                        </blockquote><!-- END --> <!-- CUSTOM BLOCKQUOTE -->
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <style>
+
+        .contain {
+            position: relative;
+            height: 100vh;
+            width: 100%;
+            background: #478680;
+            overflow: hidden;
+            padding: 0 5%;
+            box-sizing: border-box;
+        }
+
+        .circle {
+            position: absolute;
+            top: 50%;
+            left: 90%;
+            width: 140%;
+            height: 200%;
+            border-radius: 50%;
+            background: #F0DF94;
+            transform: translate(-50%, -50%);
+            z-index: 1;
+        }
+        .circle1 {
+            position: absolute;
+            top: -30%;
+            left: 90%;
+            width: 140%;
+            height: 200%;
+            border-radius: 50%;
+            background: #F0DF94;
+            transform: translate(-50%, -50%);
+            z-index: 1;
+        }
+
+        .content {
+            height: 100%;
+            width: 100%;
+            z-index: 10;
+            position: relative;
+            margin: 0 10%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .content .btn-event {
+            display: inline-block;
+            border-radius: 10px;
+            background: linear-gradient(45deg, #478680, #ED773C);
+            padding: 10px 20px;
+            box-sizing: border-box;
+            text-decoration: none;
+            color: #E4E5BC;
+            box-shadow: 3px 8px 22px rgba(94, 28, 68, 0.15);
+        }
+
+        .content h1 {
+            font-size: 4.5rem;
+            font-weight: 900;
+            margin-top: 24px;
+            margin-bottom: 15px;
+            color: #fff;
+            z-index: 11;
+        }
+
+        .content p {
+            font-size: 2em;
+            margin: 5% 0;
+            color: #70B7AE;
+        }
+
+        .feature-img {
+            width: 50%;
+        }
+
+        .feature-img img {
+            width: 90%;
+            height: 90%;
+        }
+
+        .content-event {
+            width: 50%;
+            margin-bottom: 20%
+        }
+
+        .section {
+            position: relative;
+            background: #478680;
+            width: 100%;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 2;
+            box-sizing: border-box;
+            overflow: hidden;
+            margin-top: -20vh;
+        }
+
+        .blockquote-custom {
+            position: relative;
+            font-size: 1.1rem;
+            z-index: 1000;
+        }
+
+        .blockquote-custom-icon {
+            width: 250px;
+            height: 50px;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            top: -25px;
+            left: 50px;
+            background: #70B7AE !important;
+        }
+
+        @media screen and (max-width: 1024px) {
+            .content {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .content-event {
+                width: 100%;
+                margin-bottom: 0;
+            }
+
+            .content img {
+                width: 100%;
+            }
+             .row-margin .col-lg-6{
+                margin-top: 3rem!important;
+            }
+             .container-margin
+             {
+                 margin-top: 10vh ;
+             }
+        }
+
+        @media screen and (max-width: 764px) {
+            .content img {
+                display: none;
+            }
+
+            .circle {
+                display: none;
+            }.circle1 {
+                display: none;
+            }
+
+            .content {
+                background: #F0DF94;
+                margin: 0;
+            }
+
+            .contain {
+                padding: 0;
+            }
+
+            .content-event {
+                width: 100%;
+                margin-left: 20%;
+            }
+            .section{
+                margin: 0;
+            }
+
+
+
+        }
+    </style>
+
 {% endblock %}
