--- a/events/templates/persons/home.html
+++ b/events/templates/persons/home.html
@@ -10,7 +10,7 @@
             <div class="content-event">
                 <h1>Share Event <br> Together</h1>
                 <p>Les meilleurs événements près de chez vous</p>
-                <a class="btn-event" href="#">Nos évènements</a>
+                <a class="btn-event" href="{% url 'events' %}">Nos évènements</a>
             </div>
             <div class="feature-img">
                 <img src="{% static "assets/friendship.png" %}" alt="">
