--- a/events/templates/persons/base_navbar.html
+++ b/events/templates/persons/base_navbar.html
@@ -19,9 +19,9 @@
                     {% endfor %}
                 </ul>
                 <form action="{% url 'events' %}" class="form-inline my-2 my-lg-0 ml-auto mr-5" method="get">
-                    <input name="q" class="form-control mr-sm-2" type="search" placeholder="Search"
+                    <input name="q" class="form-control mr-sm-2" type="search" placeholder="ex: Course"
                            aria-label="Search">
-                    <button class="search btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <button class="search btn btn-outline-success my-2 my-sm-0" type="submit">rechercher</button>
                 </form>
                 <ul class="navbar-nav mr-0">
                     <li class="nav-item dropdown">
