--- a/events/templates/persons/home.html
+++ b/events/templates/persons/home.html
@@ -10,7 +10,7 @@
             <div class="content-event">
                 <h1>Share Event <br> Together</h1>
                 <p>Les meilleurs événements près de chez vous</p>
-                <a class="btn-event" href="{% url 'events' %}">Nos évènements</a>
+                <a class="btn-event" href="{% url 'events' %}">Nos événements</a>
             </div>
             <div class="feature-img">
                 <img src="{% static "assets/friendship.png" %}" alt="">
@@ -29,12 +29,11 @@
                         <blockquote class="blockquote blockquote-custom bg-white p-5 shadow rounded">
                             <div class="blockquote-custom-icon bg-info shadow-sm"><h2 class="h5 m-0 text-light">POUR QUI
                                 ?</h2></div>
-                            <p class="mb-0 mt-3 font-italic"> Ce site est accessible pour les professionnels de
-                                l'évènement
+                            <p class="mb-0 mt-3 font-italic"> Ce site est accessible pour les professionnels
                                 comme pour les particuliers
                                 qui
                                 souhaitent
-                                promouvoir des évènements ou simplement les utilisateurs qui souhaite participer.</p>
+                                promouvoir des événements ou simplement les utilisateurs qui souhaite participer.</p>
                         </blockquote><!-- END --> <!-- CUSTOM BLOCKQUOTE -->
                     </div>
                     <div class="col mt-5">
@@ -42,12 +41,12 @@
                             <div class="blockquote-custom-icon bg-info shadow-sm"><h2 class="h5 m-0 text-light">VOUS
                                 SOUHAITEZ ?</h2>
                             </div>
-                            <p class="mb-0 mt-3 font-italic"> Faire quelque chose de nouveau ou apprendre?
+                            <p class="mb-0 mt-3 font-italic"> Faire quelque chose de nouveau ou apprendre ?
                                 Vous ne savez pas quoi faire avec votre enfant, vote soeur ou bien vos copines pour
                                 sortir ? Trouver
                                 des
-                                évènements, de tous genre, autour de vous, avec des utilisateurs notés grâce à leurs
-                                évènements
+                                événements, de tous genre, autour de vous, avec des utilisateurs notés grâce à leurs
+                                événements
                                 précédents.</p>
                         </blockquote><!-- END -->
                     </div>
@@ -58,11 +57,10 @@
                             <div class="blockquote-custom-icon bg-info shadow-sm"><h2 class="h5 m-0 text-light">QUI
                                 SOMMES-NOUS ?</h2></div>
                             <p class="mb-0 mt-3 font-italic"> Un groupe d'étudiant qui souhaite divertir les gens.
-                                Enfaite
-                                on aime faire des activités
-                                sympas
+                                Nous aimons faire des activités
+                                divertissante
                                 et découvrir
-                                de nouvelles choses. On a donc souhaité faire rencontrer les gens avec des activités,
+                                de nouvelles choses. Nous avons donc souhaité faire rencontrer les gens avec des activités,
                                 aider les
                                 gens à
                                 sortir autrement.</p>
