--- a/events/templates/persons/profil/profil_show_user.html
+++ b/events/templates/persons/profil/profil_show_user.html
@@ -9,7 +9,7 @@
             <a class="nav-link" href="{% url 'profil-show-user' profil_person.pk %}">Profil</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'profil-show-events' profil_person.pk %}">Events</a>
+            <a class="nav-link" href="{% url 'profil-show-events' profil_person.pk %}">Événements</a>
         </li>
     </ul>
     <div class="row my-3">
