--- a/events/templates/persons/registration/incription.html
+++ b/events/templates/persons/registration/incription.html
@@ -4,23 +4,70 @@
 {% block title %}Inscription{% endblock %}
 
 {% block content %}
-     <form method="post">
+    <form method="post">
         {% csrf_token %}
-        <div>
-            {% bootstrap_field form.email required_css_class='required'%}
-            {% bootstrap_field form.password required_css_class='required'%}
-            {% bootstrap_field form.first_name required_css_class='required'%}
-            {% bootstrap_field form.last_name required_css_class='required'%}
-            {% bootstrap_field form.birth_date required_css_class='required'%}
-            {% bootstrap_field form.address required_css_class='required'%}
-            {% bootstrap_field form.zip_code required_css_class='required'%}
-            {% bootstrap_field form.city required_css_class='required'%}
-            {% bootstrap_field form.country required_css_class='required'%}
-            {% bootstrap_field form.phone_number required_css_class='required'%}
-            {% bootstrap_field form.pseudo required_css_class='required'%}
-            {% bootstrap_field form.person_type required_css_class='required'%}
-            {% bootstrap_field form.is_visible required_css_class='required'%}
+        <div class="mt-3 ">
+            <div class="row mt-3">
+                <h1 class="col-md-11 m-auto">Inscription</h1>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-5 m-auto">
+                    {% bootstrap_field form.first_name required_css_class='required' %}
+                </div>
+                <div class="col-md-5 m-auto">
+                    {% bootstrap_field form.last_name required_css_class='required' %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 m-auto">
+                    {% bootstrap_field form.birth_date required_css_class='required' %}
+                </div>
+                <div class="col-md-5 m-auto">
+                    {% bootstrap_field form.address required_css_class='required' %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 m-auto">
+                    {% bootstrap_field form.zip_code required_css_class='required' %}
+                </div>
+                <div class="col-md-5 m-auto">
+                    {% bootstrap_field form.city required_css_class='required' %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 m-auto">
+                    {% bootstrap_field form.country required_css_class='required' %}
+                </div>
+                <div class="col-md-5 m-auto">
+                    {% bootstrap_field form.phone_number required_css_class='required' %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 m-auto">
+                    {% bootstrap_field form.email required_css_class='required' %}
+                </div>
+                <div class="col-md-5 m-auto">
+                    {% bootstrap_field form.password required_css_class='required' %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 m-auto">
+                    {% bootstrap_field form.pseudo required_css_class='required' %}
+                </div>
+                <div class="col-md-5 m-auto">
+                    {% bootstrap_field form.person_type required_css_class='required' %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-11 m-auto text-left">
+                    {% bootstrap_field form.is_visible required_css_class='required' %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-11 m-auto text-right">
+                    <button type="submit" class="btn btn-primary">Ajouter</button>
+                </div>
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary">Ajouter</button>
     </form>
 {% endblock %}
