--- a/events/templates/persons/registration/login.html
+++ b/events/templates/persons/registration/login.html
@@ -18,7 +18,9 @@
                     <button type="submit" class="btn btn-primary w-100 mb-2">Se connecter</button>
                 </div>
             </form>
-            <a href="{% url 'inscription' %}">Vous n'avez pas de compte ? Inscrivez-vous</a>
+            <div class="text-center">
+                <a href="{% url 'inscription' %}" class="text-muted">Vous n'avez pas de compte ? Inscrivez-vous</a>
+            </div>
         </div>
     </div>
 {% endblock %}
